--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -82,7 +82,7 @@
                             android:paddingLeft="14dp"
                             android:paddingRight="14dp"
                             android:paddingTop="14dp"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorWhite"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                         <TextView
@@ -113,7 +113,7 @@
                             android:paddingLeft="14dp"
                             android:paddingRight="14dp"
                             android:paddingTop="14dp"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorWhite"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                         <TextView
@@ -182,7 +182,7 @@
                         android:paddingRight="14dp"
                         android:layout_marginTop="14dp"
                         android:text="@string/Ingredients"
-                        android:textColor="@color/colorPrimaryDark"
+                        android:textColor="@color/colorWhite"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                     <LinearLayout
